--- a/wines/templates/wines/includes/wine_card.html
+++ b/wines/templates/wines/includes/wine_card.html
@@ -1,6 +1,6 @@
-<div class="col-3 rounded-1 ">
+<div class="col-s12 col-md-6 col-lg-3 mb-4 rounded-1 ">
     <a class="text-decoration-none" href="{% url 'wine_details' wine.id %}">
-        <div class="card shadow-lg border-0">
+        <div class="card shadow-lg pt-4 border-0">
             <span class="badge text-dark bg-warning price-tag p-1">
                 {{wine.rating }} 
                 <i class="fas fa-star fa-sm"></i>
@@ -21,19 +21,19 @@
                         Regiunea <strong> {{wine.region}}</strong>
                     </div>
                 </div>
-                <form method="POST" action="{% url 'add_to_bag' wine.id %}" id="wine-form_{{wine.id}}">
+                <form class="card-form" method="POST" action="{% url 'add_to_bag' wine.id %}" data-wine_id={{wine.id}}>
                         {% csrf_token %}
                     <div class="row">
                         <div class="col-6"> 
-                            <select class="form-control form-control-sm border-0 size" name="wine_size" id="{{wine.id}}" > 
+                            <select class="form-control form-control-sm border-0 size" name="wine_size"> 
                             {% for sizeDetails in wine.size_details_set.all %}
                                 <option value="{{sizeDetails.size}}" data-quantity_available="{{sizeDetails.qty_available}}" data-price_size="{{sizeDetails.price}}">
                                     {{sizeDetails.size}}
                                 </option>
                             {% endfor %}
                             </select></div>
-                        <div class="col-6">
-                            <strong class="price_wine_{{wine.id}}">
+                        <div class="col-6 text-center px-0">
+                            <strong class="price_slot ">
                             <!--price set through js-->
                             </strong>
                         </div>
@@ -44,7 +44,7 @@
                         </div>
                         <div class="col-6">
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            <button type="submit" form="wine-form_{{wine.id}}" class="btn btn-danger rounded-0 w-100"><i class="fas fa-shopping-cart"></i></button>
+                            <button type="submit" class="btn btn-danger rounded-0 w-100"><i class="fas fa-shopping-cart"></i></button>
                         </div>
                     </div>
                 </form> 
