--- a/templates/base.html
+++ b/templates/base.html
@@ -27,30 +27,30 @@
                 <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}" >Grupo Pierola Romania</a>
                 <ul class="navbar-nav font-header">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'bag' %}"><strong>{{total}} RON</strong><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link text-light bg-danger" href="{% url 'bag' %}"><strong>{{total}} RON</strong><i class="fas fa-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
         </nav>
         <!-- Tablet and less header-->
-        <nav class="navbar navbar-expand-lg menu p-0 ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light menu p-0 ">
             <div class="container-fluid">
                 <!-- Brand -->
-                <a class="navbar-brand  d-lg-none m-0 brand" href="#">Grupo Pierola Romania</a>
+                <a class="navbar-brand text-dark d-lg-none m-0 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
                 <!-- Menu Button-->
-                <button class="navbar-toggler navbar-dark p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- List of menu option-->
                 <div class="collapse navbar-collapse justify-content-end font-header" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav text-center mb-2 text-danger">
                         <!-- Dropdown menu option-->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-wine-glass-alt"></i>
                                 Vinuri
                             </a>
-                            <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown bg-black bg-gradient " aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown p-0 " aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
@@ -58,27 +58,27 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="{% url 'offers' %}">
+                            <a class="nav-link text-danger" href="{% url 'offers' %}">
                                 <i class="fas fa-gifts"></i>
                                 Oferte si Promotii
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark " href="{% url 'contact' %}">
+                            <a class="nav-link text-danger" href="{% url 'contact' %}">
                                 <i class="far fa-comment-alt"></i>
                                 Contact
                             </a>
                         </li>
-                        <li class="nav-item d-md-none text-dark">
-                            <a class="nav-link " href="{% url 'bag' %}">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link text-danger" href="{% url 'bag' %} "><i class="fas fa-shopping-cart text-light bg-danger"></i> {{total}} RON</a>
                         </li>
                         <!-- Search bar -->
                         <li class="nav-item">
-                            <a class="nav-link  p-0" href="#">
+                            <a class="nav-link  p-0 text-danger" href="#">
                                 <form>
                                     <div class="input-group input-group-sm">
-                                        <input type="text" name="q" class="form-control text-dark rounded-0 border-start-0 border-end-0    border-top-0 bg-danger" placeholder="Cauta un vin" >
-                                        <button type="submit" class="btn btn-small text-dark"><i class="fas fa-search"></i></button>
+                                        <input type="text" name="q" class="form-control text-danger rounded-0 border-start-0 border-end-0    border-top-0" placeholder="Cauta un vin" >
+                                        <button type="submit" class="btn btn-small text-light bg-danger"><i class="fas fa-search"></i></button>
                                     </div>
                                 </form>
                             </a>
@@ -100,4 +100,9 @@
   </body>
 </html>
 {% block postload_js %}
+<script type="text/javascript">
+    $('body').fadeOut(0);
+    $('body').delay(50).fadeIn(0);
+    console.log('hello');
+</script>
 {% endblock %}
