--- a/wines/templates/wines/wine_details.html
+++ b/wines/templates/wines/wine_details.html
@@ -5,115 +5,153 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <div class="row">
+        <div class="row d-none d-lg-inline">
             <div class="col-12">
                 <h1>Detalii despre vin</h1>
             </div>
         </div>
         <div class="row">
-            <h3 class="text-center my-5 ">{{wine.name}}</h3>
-            <div class="col-4">
+            <h2 class="text-center fw-bold my-5 ">{{wine.name}}</h2>
+            <div class="col-sm-12 col-lg-4 d-none d-md-inline">
+                <h5 class="fw-bold">Regiunea</h5>
+                <hr class="my-0">
+                <p>{{wine.region}}</p>
+                <h5 class="fw-bold">Struguri</h5>
+                <hr class="my-0">
+                <p>{{wine.grape}}</p>
+                <h5 class="fw-bold">Procesul de obtinere</h5>
+                <hr class="my-0">
+                <p>{{wine.vinification}}</p>
+                <!-- imaginea cu vinul-->
+            </div>
+            <div class="order-sm-0 col-sm-12 col-lg-4">
                 {% if wine.image %}
-                    <img src="{{wine.image.url}}" style="max-height: 80vh;">
+                    <img class="px-auto mx-auto" src="{{wine.image.url}}" style="max-height: 80vh;">
                 {% else %}
                     <img src="{{ MEDIA_URL}}no_img.jpg" style="max-height: 80vh;">
                 {% endif %}
+                <div class="row">
+                    <div class="col-12">
+                         <form method="POST" action="{% url 'add_to_bag' wine.id  %}" id="wine-form">
+                                {% csrf_token %}
+                             <div class="row">
+                                <div class="col-6"> 
+                                    <select class="form-control form-control-sm border-0 size" name="wine_size" id="size_select"> 
+                                    {% for sizeDetails in wine.size_details_set.all %}
+                                        <option value="{{sizeDetails.size}}" data-quantity_available="{{sizeDetails.qty_available}}" data-price_size="{{sizeDetails.price}}">
+                                            {{sizeDetails.size}}
+                                        </option>
+                                    {% endfor %}
+                                    </select></div>
+                                <div class="col-6 text-center px-0">
+                                    <strong id="price_slot">
+                            <!--price set through js-->
+                                    </strong>
+                            </div>
+                        </div>
+                        <p class="m-0">
+                           <div class="row">
+                        <div class="col-6 px-0">
+                            {% include 'wines/includes/qty_input.html'%}
+                        </div>
+                        <div class="col-6">
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            <button type="submit" class="btn btn-danger rounded-0 w-100"><i class="fas fa-shopping-cart"></i></button>
+                        </div>
+                    </div>
+                    </form> 
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 d-md-none">
+                <h5 class="fw-bold">Regiunea</h5>
+                <hr class="my-0">
+                <p>{{wine.region}}</p>
+                <h5 class="fw-bold">Struguri</h5>
+                <hr class="my-0">
+                <p>{{wine.grape}}</p>
+                <h5 class="fw-bold">Procesul de obtinere</h5>
+                <hr class="my-0">
+                <p>{{wine.vinification}}</p>
                 <!-- imaginea cu vinul-->
             </div>
-            <div class="col-4">
-                <p>{{wine.region}}</p>
-                <p>{{wine.grape}}</p>
-                <p>{{wine.vinification}}</p>
+            <div class="col-sm-12 col-lg-4 ">
+                <!--detalii despre vin-->
+                <h5 class="fw-bold">Gustul</h5>
+                <hr class="my-0">
                 <p>{{wine.palate}}</p>
-                <!--detalii despre vin-->
-            </div>
-            <div class="col-4">
-                <!--detalii despre vin-->
+                <h5 class="fw-bold">Maturare</h5>
+                <hr class="my-0">
                 <p>{{ wine.aging }}</p>
+                <h5 class="fw-bold">Descrierea culorii</h5>
+                <hr class="my-0">
                 <p>{{ wine.color_details}}</p>
+                <h5 class="fw-bold">Temperatura de servire</h5>
+                <hr class="my-0">
                 <p>{{ wine.serving }}</p>
+                <h5 class="fw-bold">Impachetarea</h5>
+                <hr class="my-0">
                 <p>{{ wine.boxing }}</p>
-                <p>{{ wine.price }}</p>
-                <p>{{ wine.rating }}</p>
+                <h5 class="fw-bold">Ratingul Producatorului</h5>
+                <hr class="my-0">
+                <p>{{ wine.rating }} <i class="fas fa-star fa-sm"></i></p>
+                <h5 class="fw-bold">Prima zi pe piata</h5>
+                <hr class="my-0">
                 <p>{{ wine.first_time_listed }}</p>
-                <form method="POST" action="{% url 'add_to_bag' wine.id  %}" id="wine-form">
-                    {% csrf_token %}
-                        <p class="m-0"><select class="form-control form-control-sm size-select" name="wine_size" id="{{wine.id}}" > 
-                        {% for size in wine_sizes %}
-                        <option value="{{size.size}}" data-quantity_available="{{size.quantity_available}}">
-                            {{size.size}}
-                        </option>
-                        {% endfor %}
-                        </select></p>
-                        <p class="m-0">
-                            <div class="input-group input-group-sm">
-                                <div class="input-group-preppend">
-                                    <button class="decrement-qty btn btn-dark rounded-0 btn-sm" data-item_id="{{ wine.id }}" id="decrement-qty_{{ wine.id }}">
-                                    <i class="fas fa-minus"></i>
-                                    </button>
-                                </div>
-                                <input class="form-control qty_input" type="number" value="1" min="1" max="99" id="id_input_{{wine.id}}" name="quantity" data-item_id="{{wine.id}}">
-                                <div class="input-group-append mr-1">
-                                    <button class="increment-qty btn btn-dark rounded-0 btn-sm" data-item_id="{{ wine.id }}" id="increment-qty_{{ wine.id }}">
-                                    <i class="fas fa-plus"></i>
-                                    </button>
-                                </div>                  
-                            </div>
-                        </p>
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        <input type="submit" class="btn btn-danger rounded-0 w-100" value="Comanda ACUM!">
-                    </form> 
             </div>
         </div>
     </div>
 {% endblock %}
 {% block postload_js %}
 <script type="text/javascript">
-// function that enables or disable the buttons
-function handleEnableDisable(itemId){
-        var currentInput = parseInt($(`#id_input_${itemId}`).val());
-        var qtyAvailable = parseInt($(`#id_input_${itemId}`).data('qty-available'));
-        var minusDisabled = currentInput < 2 ;
-        var plusDisabled = currentInput >= qtyAvailable; 
-        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
-        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+    function handleEnableDisable(){
+            var qty_input = $('.qty_input');
+            var currentInput = parseInt(qty_input.val());
+            var qtyAvailable = parseInt(qty_input.data('qty-available'));
+            var minusDisabled = currentInput < 2 ;
+            var plusDisabled = currentInput >= qtyAvailable; 
+            qty_input.prev('.input-group-preppend').find('.decrement-qty').prop('disabled', minusDisabled);
+            qty_input.next('.input-group-append').find('.increment-qty').prop('disabled', plusDisabled);
+        }
+    // sets the quantity at input and max value
+    function maxQtyAvaibleSetter()
+    {  
+        var selectedOption = $('#size_select option:selected');
+        var qty = selectedOption.data('quantity_available');
+        var price = selectedOption.data('price_size');
+        var qty_input = $('.qty_input');
+        qty_input.data('qty-available', qty);
+        qty_input.attr('max', qty);
     }
-// sets the quanitity at input and max value
-function maxQtyAvaibleSetter(wineId){
-    var qty = $(`#${wineId} option:selected`).data('quantity_available');
-    $(`#id_input_${wineId}`).data('qty-available', qty);
-    $(`#id_input_${wineId}`).attr('max', qty)
-}
-// enables/disables the buttons on page load
-var allWineInputs = $('.qty_input');
-for (let i=0; i < allWineInputs.length; i++){
-    var wineId = $(allWineInputs[i]).data('item_id');
-    console.log("asdasd");
-    maxQtyAvaibleSetter(wineId);
-    handleEnableDisable(wineId);
-}
-$('.decrement-qty').click(function(e){
-    e.preventDefault();
-    var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-    var currentValue = parseInt($(closestInput).val());
-    $(closestInput).val(currentValue - 1);
-    var itemId = $(this).data('item_id');
-    handleEnableDisable(itemId);
-})
-$('.increment-qty').click(function(e){
-    e.preventDefault();
-    var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-    var currentValue = parseInt($(closestInput).val());
-    $(closestInput).val(currentValue + 1);
-    var itemId = $(this).data('item_id');
-    handleEnableDisable(itemId);
-})
+    function priceHandler(){
+        var selectedOption = $('#size_select option:selected');
+        var price = selectedOption.data('price_size');
 
-// on change of size, updates the qty available for wine
-$('.size-select').change(function(event){
-    var wineTargeted = event.target.id
-    maxQtyAvaibleSetter(wineTargeted); // update the qty-available on input
-    handleEnableDisable(wineTargeted); // enable disable buttons accordingly
-})
-</script>
+        $('#price_slot').text(`${price} RON`);
+    }
+    $('.decrement-qty').click(function(e){
+        e.preventDefault();
+        var Input = $('.qty_input');
+        var currentValue = parseInt($(Input).val());
+        $(Input).val(currentValue - 1);
+        handleEnableDisable();
+    })
+    $('.increment-qty').click(function(e){
+        e.preventDefault();
+        var Input = $('.qty_input');
+        var currentValue = parseInt($(Input).val());
+        $(Input).val(currentValue + 1);
+        handleEnableDisable();
+    })
+        maxQtyAvaibleSetter();
+        priceHandler();
+        handleEnableDisable();
+    // on change of size, updates the qty available for wine
+    $('#size_select').change(function(event){
+        priceHandler();
+        maxQtyAvaibleSetter(); // update the qty-available on input
+        handleEnableDisable(); // enable disable buttons accordingly
+        
+    });
+    </script>
 {% endblock %}
