Responsiveness Bag, Checkout, search function

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,47 +6,45 @@
 <div class="container">
 <h1 class="mb-2"> Checkout </h1>
 <div class="row">
-    <div class="col-6">
+    <div class="col-12 mb-5">
         <!--Delivery Address-->
         <form method="POST" action="#">
             {% csrf_token %}
             {{OrderForm|crispy}}
-            <button class="btn btn-warning rounded-0" type="submit">Trimite comanda de {{total}} RON <i class="fas fa-paper-plane"></i></button>
+            <button class="btn btn-warning rounded-0 mt-3" type="submit">Trimite comanda de {{total}} RON <i class="fas fa-paper-plane"></i></button>
         </form>
     </div>
-    <div class="col-6">
+    <div class="col-12 mb-5">
         <!--Order Details-->
-        <div class="row mb-3 shadow">
-            <div class="col-2 ">Image</div>
-            <div class="col-4 text-center">Name</div>
-            <div class="col-2 text-center">Quantity</div>
-            <div class="col-2 text-center">Price</div>
-            <div class="col-2 text-center">Subtotal</div>
+        <div class="container">
+            {% for item in bag_items %}
+        <div class="row pb-2 shadow">
+        <div class="col-2 mx-auto">
+            {% if item.wine.image %}
+                <img src="{{item.wine.image.url}}" class="mx-auto" style="height:9rem; width:3rem;" alt="{{wine.name}}">
+            {% else %}
+                <img src="{{MEDIA_URL}}no_img.jpg" width="100rem" height="100rem" >
+            {% endif %}
         </div>
-        {% for item in bag_items %}
-        <div class="row shadow mb-2">
-            <div class="col-2 mx-auto">
-                {% if item.wine.image %}
-                    <img src="{{item.wine.image.url}}" class="mx-auto" style="height:9rem; width:3rem;" alt="{{wine.name}}">
-                {% else %}
-                    <img src="{{MEDIA_URL}}no_img.jpg" width="100rem" height="100rem" >
-                {% endif %}
-            </div>
-            <div class="col-4 my-auto">
-                <p><strong>{{item.wine.name}}</strong></p>
-                <p><strong>{{item.size}}</strong></p>
-            </div>
-            <div class="col-2 my-auto">
-                    {{item.qty}}
-            </div>
-            <div class="col-2 my-auto text-center">
-                <strong>{{item.price}} RON</strong>
-            </div>
-            <div class="col-2 my-auto text-center">
-                <strong>{{item.price|calc_subtotal:item.qty}} RON</strong>
-            </div>
+        <div class="col-4 my-auto">
+            <p><strong>{{item.wine.name}}</strong></p>
+            <p><strong >{{item.size}}</strong></p>
+        </div>
+        <div class="col-2 my-auto">
+           {{ item.qty }}
+        </div>
+        <div class="col-2 my-auto text-center px-0">
+            <span>Price:</span>
+            <strong>{{item.price}} RON</strong>
+        </div>
+        <div class="col-2 my-auto text-center px-0">
+            <span>Subtotal:</span>
+            <strong>{{item.price|calc_subtotal:item.qty}} RON</strong>
+        </div>
         </div>
         {% endfor %}
+        </div>
+        
     <div class="row d-flex justify-content-end mb-3">
         <div class="col-4">
             <div class="row">
@@ -62,7 +60,7 @@
     <div class="col-6">
         <a href="{% url 'bag' %}" class="btn btn-outline-danger rounded-0 w-100">
             <i class="fas fa-shopping-cart"></i>
-            <strong>  Editeaza comanda </strong>
+            <strong>  Editeaza </strong>
         </a>
     </div>
 </div>
