--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -3,19 +3,30 @@
 {% load static %}
 {% block content %}
 <div class="container">
-<h1 class="mb-3"> Cosul tau de cumparaturi </h1>
+<h1 class="mb-3 d-none d-md-flex"> Cosul tau de cumparaturi </h1>
 {% if not bag_items %}
     <p class="my-auto mx-auto">Cosul de cumparaturi este gol. <a class="link link-danger" href="{% url 'wines_view' %}">Descopera vinurile Grupo Pierola</a></p>
 {% else %}
-    <div class="row mb-2 shadow">
-        <div class="col-2 ">Image</div>
-        <div class="col-4 text-center">Name</div>
-        <div class="col-2 text-center">Quantity</div>
-        <div class="col-2 text-center">Price</div>
-        <div class="col-2 text-center">Subtotal</div>
-    </div>
 
+<div class="row d-flex d-md-none justify-content-center mb-2">
+    <div class="col-6 ml-auto ">
+        <a href="{% url 'wines_view' %}" class="btn btn-dark rounded-0 w-100"><i class="fas fa-chevron-left"></i><strong>  INCA CEVA</strong></a>
+    </div>
+    <div class="col-6 mr-auto ">
+        <a href="{% url 'checkout' %}" class="btn btn-info rounded-0 w-100"><strong>CHECKOUT    </strong><i class="fas fa-chevron-right"></i></a>
+    </div>
+</div>
+    <div class="row d-flex d-md-none justify-content-end mb-2">
+    <div class="col-6">
+        <div class="row">
+            <div class="col-4"><small>Total:</small></div>
+            <div class="col-8"><strong>{{total}} RON</strong></div>
+        </div>
+    </div>
+</div>
+<div class="container">
 {% for item in bag_items %}
+
     <div class="row pb-2 shadow">
         <div class="col-2 mx-auto">
             {% if item.wine.image %}
@@ -38,19 +49,27 @@
                     Update
             </a>
         </div>
-        <div class="col-2 my-auto text-center"><strong>{{item.price}} RON</strong></div>
-        <div class="col-2 my-auto text-center"><strong>{{item.price|calc_subtotal:item.qty}} RON</strong></div>
+        <div class="col-2 my-auto text-center px-0">
+            <span>Price:</span>
+            <strong>{{item.price}} RON</strong>
+        </div>
+        <div class="col-2 my-auto text-center px-0">
+            <span>Subtotal:</span>
+            <strong>{{item.price|calc_subtotal:item.qty}} RON</strong>
+        </div>
     </div>
 {% endfor %}
-<div class="row d-flex justify-content-end mb-2">
-    <div class="col-2">
+</div>
+
+<div class="row d-none d-md-flex justify-content-end mb-2">
+    <div class="col-6">
         <div class="row">
             <div class="col-4"><small>Total:</small></div>
             <div class="col-8"><strong>{{total}} RON</strong></div>
         </div>
     </div>
 </div>
-<div class="row d-flex justify-content-center">
+<div class="row d-none d-md-flex justify-content-center">
     <div class="col-2 ml-auto ">
         <a href="{% url 'wines_view' %}" class="btn btn-dark rounded-0 w-100"><i class="fas fa-chevron-left"></i><strong>  INCA CEVA</strong></a>
     </div>
