--- a/wines/templates/wines/includes/mobile_filters.html
+++ b/wines/templates/wines/includes/mobile_filters.html
@@ -1,4 +1,4 @@
-  <div class="col-sm-12 col-md-4 " id="filter">
+  <div class="col-sm-12  mb-2" id="filter">
         <div class="accordion " id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
