--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,22 +6,30 @@
 {% block content %}
 {% if offers %}
     {% for offer in offers %}
-    <div class="jumbotron jumbotron-fluid mb-5" style="background: url({{offer.image.url}}); height:60vh; background-repeat:no-repeat; background-size:cover; background-position: center;">
-        <div class="container pt-5" style="color:{{offer.text_color}}">
-            <h1 class="display-4 pt-5">{{offer.title}}</h1>
-            <p class="lead">{{offer.hook}}</p>
+    <div class="jumbotron jumbotron-fluid mb-5 hero-img" style="background: url({{offer.image.url}}); ">
+        <div class="container pt-5 " style="color:{{offer.text_color}}">
+            <h1 class="display-4 pt-5">        
+                    {{offer.title}}
+            </h1>
             <p class="lead">
-                <a class="btn btn-danger btn-lg float-right border-dark rounded-0 " href="{% url 'offer_details' offer.id %}" role="button">Afla mai multe <i class="fas fa-chevron-right"></i></a>
+                {{offer.hook}}
+            </p>
+            <p class="lead">
+                <a class="btn btn-danger btn-lg float-right rounded-0 " href="{% url 'offer_details' offer.id %}" role="button">Afla mai multe <i class="fas fa-chevron-right"></i></a>
             </p>
         </div>
     </div>
     {% endfor %}
 {% else %}
-    <div class="jumbotron jumbotron-fluid" style="background: url({{MEDIA_URL}}hero_img.jpg); height:60vh; color:white;">
-    <div class="container pt-5">
-        <h1 class="display-4 pt-5">Grupo Pierola Romania</h1>
-        <p class="lead">Desavarsire in fiecare strop</p>
-    </div>
+    <div class="jumbotron jumbotron-fluid hero-img" style="background: url({{MEDIA_URL}}hero_img.jpg); color:black;">
+        <div class="container pt-5">
+            <h1 class="display-4 pt-5">
+                Grupo Pierola Romania
+            </h1>
+            <p class="lead">
+                Desavarsire in fiecare strop
+            </p>   
+        </div>
     </div>
 {% endif %}
 <div class="container mt-5">
