--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,7 +19,15 @@ body{
 }
 @media (min-width: 768px){
     .content-zone{
-    margin-top:10rem;
+    margin-top:6rem;
+    }
+    .brand{
+    font-size: 2.5rem;
+    } 
+}
+@media (min-width: 900px){
+    .content-zone{
+    margin-top:9rem;
     }
     .brand{
     font-size: 2.5rem;
