--- a/wines/templates/wines/wine_details.html
+++ b/wines/templates/wines/wine_details.html
@@ -22,14 +22,18 @@
                 <h5 class="fw-bold">Procesul de obtinere</h5>
                 <hr class="my-0">
                 <p>{{wine.vinification}}</p>
-                <!-- imaginea cu vinul-->
             </div>
             <div class="order-sm-0 col-sm-12 col-lg-4">
-                {% if wine.image %}
-                    <img class="px-auto mx-auto" src="{{wine.image.url}}" style="max-height: 80vh;">
-                {% else %}
-                    <img src="{{ MEDIA_URL}}no_img.jpg" style="max-height: 80vh;">
-                {% endif %}
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                         {% if wine.image %}
+                            <img class="mx-auto" src="{{wine.image.url}}" style="max-height: 80vh;">
+                        {% else %}
+                            <img src="{{ MEDIA_URL}}no_img.jpg" style="max-height: 80vh;">
+                        {% endif %}
+                    </div>
+                </div>
+               
                 <div class="row">
                     <div class="col-12">
                          <form method="POST" action="{% url 'add_to_bag' wine.id  %}" id="wine-form">
