--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -1,7 +1,55 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extra_title %} My Profile {% endblock %}
+{% block extracss%}
 
-{% block title %} Profile {% endblock %}
-
+{% endblock %}
+{% block extra_header%}
+<div class="row border-bottom border-danger">
+    <div class="col-12 mt-2 text-center">
+        <h2>My Profile</h2>
+    </div>
+</div>
+{% endblock %}
 {% block content %}
-<h1>Hello ON profiles</h1>
+<div class="container justify-content-center">
+    <div class="row">
+        <div class="col-md-12 col-lg-6">
+            <p> Profile Details </p>
+            <form method="POST" action="{% url 'profile_view' %}" id="profile_update">
+                {% csrf_token%}
+                {{ form|crispy }}
+                <button class="btn btn-dark rounded-0 float-right">Update</button>
+            </form>
+        </div>
+        <div class="col-md-12 col-lg-6">
+            <p> Orders history </p>
+            <div class="order-history table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Order Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'order_history' order.order_number %}"
+                                   title="{{ order.order_number }}">
+                                    {{ order.order_number|truncatechars:6 }}
+                                </a>
+                            </td>
+                            <td>{{ order.date }}</td>
+                            <td>{{ order.total }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
